fix: overlapping on navbar in mobile device

--- a/src/common/home/home.css
+++ b/src/common/home/home.css
@@ -31,7 +31,7 @@
 
 .app-home-body .app-home-body-content {
   margin-bottom: 4rem;
-  z-index: 10;
+  z-index: 1;
 }
 
 .app-home-body .body-title {
